<resources>
    <string name="app_name">CustomJewelryAndClothingStore</string>
    <string name="menu_title_clothes">Одежда</string>
    <string name="menu_title_shoppers">Шопперы</string>
    <string name="menu_title_jewelry">Бижутерия</string>
    <string name="chips_beads">Бусы</string>
    <string name="chips_bracelets">Браслеты</string>
    <string name="chips_earring">Серьги</string>
    <string name="chips_brooches">Броши</string>
    <string name="menu_title_custom">Свой дизайн</string>
    <string name="menu_title_order">Заказать</string>
    <string name="menu_title_contacts">Контакты</string>
    <string name="menu_title_telegram">Telegram</string>
    <string name="menu_title_whatsapp">WhatsApp</string>
    <string name="menu_title_about_us">О нас</string>
    <string name="chip_beads">Бусы</string>
    <string name="chip_bracelets">Браслеты</string>
    <string name="chip_earrings">Серьги</string>
    <string name="chip_brooches">Броши</string>
    <string name="chip_all">Все</string>
</resources>